--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.transfinitte_decoders">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".adminDoc.Doctor_Activity"></activity>
+        <activity android:name=".chatbot.Message_Service"></activity>
+        <activity android:name=".adminDoc.Doctor_Activity" />
         <activity android:name=".adminDoc.Medical_Report">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,12 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".adminDoc.LoginActivityDoc">
-        </activity>
+        <activity android:name=".adminDoc.LoginActivityDoc"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <receiver android:name=".notification.AlarmReciever" />
     </application>
+
 </manifest>
