--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".chatbot.Message_Service"></activity>
         <activity android:name=".adminDoc.Doctor_Activity" />
         <activity android:name=".adminDoc.Medical_Report">
             <intent-filter>
@@ -25,7 +24,9 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-
+        <service
+            android:name=".chatbot.Chat_Head_Service"
+            android:stopWithTask="false" />
         <receiver android:name=".notification.AlarmReciever" />
     </application>
 
