--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,11 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".adminDoc.Doctor_Activity" />
-        <activity android:name=".adminDoc.Medical_Report">
+        <activity android:name=".adminDoc.Medical_Report"/>
 
         <activity android:name=".service"></activity>
         <activity android:name=".adminDoc.dispenser_activity"></activity>
-        <activity android:name=".adminDoc.Doctor_Activity" />
         <activity android:name=".DoctorsActivity"/>
-        <activity android:name=".adminDoc.Medical_Report"></activity>
         <activity android:name=".adminDoc.LoginActivityDoc">
 
             <intent-filter>
@@ -29,7 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".adminDoc.LoginActivityDoc"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
