--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.transfinitte_decoders">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
         android:allowBackup="true"
@@ -14,20 +15,17 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".adminDoc.Doctor_Activity" />
-        <activity android:name=".adminDoc.Medical_Report">
 
         <activity android:name=".service"></activity>
         <activity android:name=".adminDoc.dispenser_activity"></activity>
         <activity android:name=".DoctorsActivity" />
         <activity android:name=".adminDoc.Medical_Report"></activity>
         <activity android:name=".adminDoc.LoginActivityDoc">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".adminDoc.LoginActivityDoc"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
