--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
     package="com.example.transfinitte_decoders">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -13,16 +16,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".adminDoc.ambulance"></activity>
         <activity android:name=".adminDoc.Doctor_Activity" />
-        <activity android:name=".adminDoc.Medical_Report"/>
-
-        <activity android:name=".service"></activity>
-        <activity android:name=".adminDoc.dispenser_activity"></activity>
-        <activity android:name=".DoctorsActivity"/>
+        <activity android:name=".adminDoc.Medical_Report" />
+        <activity android:name=".service" />
+        <activity android:name=".adminDoc.dispenser_activity" />
+        <activity android:name=".DoctorsActivity" />
         <activity android:name=".adminDoc.LoginActivityDoc">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,9 +33,12 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <service
             android:name=".chatbot.Chat_Head_Service"
             android:stopWithTask="false" />
+
         <receiver android:name=".notification.AlarmReciever" />
     </application>
+
 </manifest>
